<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.aty.options.Help">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_help_tb_toolbar"
        style="@style/toolbar_style">

        <TextView
            style="@style/toolbar_gravity_title"
            android:text="@string/help"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding10"
        android:text="@string/customer_service"
        android:textSize="@dimen/textSize18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding10"
        android:text="@string/customer_service_telephone_numbers"
        android:textColorLink="@color/colorPrimary"
        android:textSize="@dimen/textSize18"/>


    <Button
        android:id="@+id/activity_help_bt_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="@dimen/textSize18"
        android:background="@drawable/rounded_chat_with_service"
        android:padding="@dimen/padding10"
        android:text="@string/dial_to_customer_service"
        android:textColor="@color/ios_btntext_blue"/>


</LinearLayout>
