<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_ll_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.aty.user.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/activity_login_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/flight_system"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_login_tv_title"
            android:gravity="center"
            android:text="@string/control_every_thing"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize18"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_login_et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/input_account"
            android:inputType="textVisiblePassword"
            android:maxLength="18"
            android:maxLines="1"
            android:padding="15dp"
            android:text="test"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@android:color/white"/>

        <EditText
            android:id="@+id/activity_login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:maxLength="18"
            android:maxLines="1"
            android:padding="15dp"
            android:text="test"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@android:color/white"/>

        <TextView
            android:id="@+id/activity_login_tv_forgetPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="16sp"
            android:text="@string/forget_pwd"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bt_login">

            <Button
                android:id="@+id/activity_login_bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/login_button"
                android:textColor="@color/font_white"
                android:textSize="@dimen/textSize18"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_regester_button">

            <Button
                android:id="@+id/activity_login_tv_regAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/register_button"
                android:textColor="@color/font_white"
                android:textSize="@dimen/textSize18"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <include
            layout="@layout/activity_connect_to_service"/>
    </LinearLayout>
</LinearLayout>
